--- a/404.md
+++ b/404.md
@@ -5,8 +5,7 @@ permalink: 404.html
 
 # Page Not Found
 
-Try visiting the [blog home page]({{ baseurl }}/) or [elementary.io](https://elementary.io){: onclick="plausible('Link: Homepage')" } to find what you’re looking for. If it's an older post, you can try the old [Tumblr](https://elementaryos.tumblr.com/){: #tumblr onclick="plausible('Link: Tumblr')"}.
-
+Try visiting the [blog home page]({{ baseurl }}/) to find what you’re looking for. 
 <script>
 document.addEventListener ('DOMContentLoaded', (event) => {
   let path = window.location.pathname.slice (1, window.location.pathname.length);
