--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: error
 permalink: 404.html
 ---
 
-# Page Not Found
+# Uh oh!!! Page Not Found :(
 
 Try visiting the [blog home page]({{ baseurl }}/) to find what you’re looking for. 
 <script>
